# ai-agent-educatif

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_prof.py  test_simple.py
ai_agent/: agent.py
ai_agent/actions/: data_retrievers.py  entity_creators.py
ai_agent/core/: agent_core.py
ai_agent/utils/: action_processor.py
api/: main.py  routes.py  stats.py
data/: cours.json  etudiants.json  professeurs.json
data_manager/: data_loader.py  data_saver.py  json_handler.py
entities/: cours.py  etudiant.py  evaluation.py  note.py  professeur.py  review.py
streamlit_app/: main.py
streamlit_app/pages/: ai_agent.py  documentation.py
